feat: improve user experience
Add thinking.... text after sending message to increase user experience while waiting for model response

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
 <body>
   <div class="container">
     <h1>Gemini AI Chatbot</h1>
+    <div id="loading" class="loading">Thinking...</div>
     <div id="chat-box" class="chat-box"></div>
+
     <form id="chat-form">
       <input type="text" id="user-input" placeholder="Type your message..." autocomplete="off" required />
       <button type="submit">Send</button>
